# dex-indexer

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/2025-11-28-052051_transaction_digests/: up.sql
migrations/2025-12-03-041910_cetus_swap/: up.sql
migrations/2025-12-04-065932-0000_cetus_volume/: up.sql
src/: handlers.rs  main.rs  models.rs  schema.rs  sui_types.rs
ts/: .env.example  .gitignore  ecosystem.config.js  package.json  pnpm-lock.yaml  tsconfig.json
ts/sql/: aggregate.sql  create_aggregate_fee.sql  create_cetus_liquidity_snapshot.sql
ts/src/: .gitignore  ecosystem.config.js  index.ts  scheduler.ts
ts/src/pg/: pg.client.ts
ts/src/redis/: redis.client.ts
ts/src/services/: aggregate.ts  liquidity.ts  prune.ts
ts/src/sui/: sui.client.ts
ts/src/types/: db.types.ts
